--- a/Principal.fmx
+++ b/Principal.fmx
@@ -1840,6 +1840,15 @@ object FLotoDelphi: TFLotoDelphi
       Text = 'Ranking'
       ExplicitSize.cx = 122.000000000000000000
       ExplicitSize.cy = 49.000000000000000000
+      object Button6: TButton
+        Position.X = 96.000000000000000000
+        Position.Y = 95.000000000000000000
+        Size.Width = 177.000000000000000000
+        Size.Height = 130.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 0
+        Text = 'Button6'
+      end
     end
   end
   object StyleBook1: TStyleBook
