--- a/Principal.fmx
+++ b/Principal.fmx
@@ -1842,9 +1842,27 @@ object FLotoDelphi: TFLotoDelphi
       ExplicitSize.cy = 49.000000000000000000
       object Button6: TButton
         Position.X = 96.000000000000000000
-        Position.Y = 95.000000000000000000
+        Position.Y = 71.000000000000000000
         Size.Width = 177.000000000000000000
-        Size.Height = 130.000000000000000000
+        Size.Height = 42.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 2
+        Text = 'Button6'
+      end
+      object Button7: TButton
+        Position.X = 96.000000000000000000
+        Position.Y = 119.000000000000000000
+        Size.Width = 177.000000000000000000
+        Size.Height = 42.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 1
+        Text = 'Button6'
+      end
+      object Button8: TButton
+        Position.X = 96.000000000000000000
+        Position.Y = 167.000000000000000000
+        Size.Width = 177.000000000000000000
+        Size.Height = 42.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         Text = 'Button6'
